# r-mlir-dsl

./: .gitignore  CMakeLists.txt  ReadME.md
example-ast/: ex2.json  simple.json
include/: CMakeLists.txt
include/rdslmlir/: CMakeLists.txt
include/rdslmlir/Conversion/: RPasses.h  RegisterAll.h
include/rdslmlir/Conversion/Arith/: RToArith.h
include/rdslmlir/Conversion/Common/: LoweringUtils.h
include/rdslmlir/Conversion/Linalg/: RToLinalg.h  RToLinalgPass.h
include/rdslmlir/Conversion/Math/: RToMath.h
include/rdslmlir/Conversion/MemRef/: RToMemRef.h
include/rdslmlir/Conversion/OpenMP/: RToOpenMP.h
include/rdslmlir/Conversion/RToLinalg/: LoweringPatterns.h  LoweringUtils.h
include/rdslmlir/Conversion/SCF/: RToSCF.h  RToSCFPass.h
include/rdslmlir/Dialect/R/IR/: CMakeLists.txt  RDialect.h  ROps.h  ROps.td
include/rdslmlir/Runtime/: RuntimeAstLowerer.h  RuntimeTypes.h
include/rdslmlir/Runtime/Types/: Args.h  Conversions.h  TypeInfo.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  RegisterAll.cpp
lib/Conversion/Arith/: RToArith.cpp
lib/Conversion/Common/: LoweringUtils.cpp
lib/Conversion/Linalg/: RToLinalg.cpp  RToLinalgPass.cpp
lib/Conversion/Math/: RToMath.cpp
lib/Conversion/MemRef/: RToMemRef.cpp
lib/Conversion/OpenMP/: RToOpenMP.cpp
lib/Conversion/RToLinalg/: CMakeLists.txt  LoweringPatterns.cpp  LoweringUtils.cpp  Passes.cpp
lib/Conversion/SCF/: RToSCF.cpp  RToSCFPass.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/R/IR/: CMakeLists.txt  RDialect.cpp  ROps.cpp
lib/RuntimeAstLowerer/: CMakeLists.txt  RuntimeAstLowerer.cpp  RuntimeAstLowererExpr.cpp  RuntimeAstLowererStmt.cpp
rmlirdsl/: DESCRIPTION  NAMESPACE  ReadME.md
rmlirdsl/R/: 00-state.R  01-types.R  02-expr.R  03-range-dims.R  04-context.R  05-indexing.R  06-linalg.R  07-tensor-ops.R  08-control.R  09-module.R  10-compile.R  11-runtime.R  99-rmlir.R  rmlirdsl.R
rmlirdsl/inst/examples/: 01-basic-scalar.R  02-vector-indexing.R  03-matrix-matmul.R  04-loop-store.R  05-compile-mlir.R  06-dynamic-range.R  07-inc-omp-loop.R  08-fn-fn.R
rmlirdsl/tests/: testthat.R
rmlirdsl/tests/testthat/: helper-ast.R  test-basic.R  test-dim-range.R  test-for-store.R  test-index-slice.R  test-invalid-refs.R  test-math-fns.R  test-matmul.R
runtime/: CMakeLists.txt
runtime/Execution/: rdslmlir_runtime.cpp
runtime/Runtime/: RuntimeAstLowerer.cpp  RuntimeTypes.cpp
tools/: CMakeLists.txt
tools/r-ast-to-mlir/: CMakeLists.txt  r-ast-to-mlir.cpp
tools/r-ast-to-mlir/testdata/: basic.json
tools/r-mlir-opt/: CMakeLists.txt  r-mlir-opt.cpp
